--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@lemonneko/vuetify-message": "^1.1.7",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "three": "^0.132.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@mdi/font": "^6.1.95",
     "@types/three": "^0.132.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
