--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@lemonneko/vuetify-message": "^1.1.7",
     "core-js": "^3.6.5",
+    "dat.gui": "^0.7.7",
     "register-service-worker": "^1.7.1",
     "three": "^0.132.2",
-    "vue": "^2.6.11",
-    "vuex": "^3.4.0"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@mdi/font": "^6.1.95",
+    "@types/dat.gui": "^0.7.7",
     "@types/three": "^0.132.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -28,7 +27,6 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
@@ -41,8 +39,6 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-vuetify": "^2.4.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify": "^2.5.8"
+    "vue-template-compiler": "^2.6.11"
   }
 }
