--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "dat.gui": "^0.7.7",
+    "gsap": "^3.8.0",
     "register-service-worker": "^1.7.1",
     "three": "^0.132.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/dat.gui": "^0.7.7",
     "@types/three": "^0.132.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
