--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "author": "LemonNeko <chheese048@gmail.com>",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build"
+    "build": "vite build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "dat.gui": "^0.7.7",
     "gsap": "^3.8.0",
-    "register-service-worker": "^1.7.1",
     "three": "^0.132.2",
     "vue": "^3.2.16"
   },
@@ -21,6 +20,7 @@
     "@types/three": "^0.132.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "@vitejs/plugin-vue": "^1.9.2",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
@@ -30,13 +30,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "typescript": "~4.1.5",
-    "vue-cli-plugin-vite": "~1.4.11",
-    "vue-template-compiler": "^2.6.11",
-    "@vitejs/plugin-vue": "^1.9.2",
-    "vite": "^2.6.0",
-    "vue-tsc": "^0.3.0"
+    "typescript": "^4.4.3",
+    "vite": "^2.6.0"
   },
   "license": "Apache-2.0",
   "repository": "https://github.com/LemonNekoGH/neko-model-viewer.git"
